fix: fix mobile sidebar button not showing on iPhone
Fix viewport meta tag missing comma between user-scalable and
initial-scale, and replace calc() in media queries with pre-computed
Sass values for better iOS Safari compatibility.

--- a/_sass/abstracts/_breakpoints.scss
+++ b/_sass/abstracts/_breakpoints.scss
@@ -18,7 +18,7 @@ $-breakpoints: (
 
 /* Less than the given width */
 @mixin lt($width) {
-  @media all and (max-width: calc(#{$width} - 1px)) {
+  @media all and (max-width: #{$width - 1px}) {
     @content;
   }
 }
